--- a/src/App.css
+++ b/src/App.css
@@ -36,16 +36,17 @@
     transform: rotate(360deg);
   }
 }
-.MoneyMatters_AllTransactions{
+.MoneyMatters_AllTransactions {
   display: flex;
-  background-color: #F5F7FA;
+  background-color: #f5f7fa;
 }
 
-.sidBar{
+.sidBar {
   width: 18%;
 }
 
-
-.transactionPage{
-  width: 82%;
+.transactionPage {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
