--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,54 +1,51 @@
-.sidebar{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.sideBarCompenentsContainer{
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: white;    
-    max-height: 100%;
-    min-height: 100vh;
-    border-right: 1px solid #E2E2E2;
-    
-  }
-
-.boardsContainer{
-    height: 70px;
-
+.sideBarComponentsContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: white;
+  max-height: 100%;
+  min-height: 100vh;
+  border-right: 1px solid #e2e2e2;
 }
 
-.logoAndBoards{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+.boardsContainer {
+  height: 70px;
 }
 
-.logo{
-    display: inline-flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 20px;
-    margin-top: 30px;
-    cursor: pointer;
+.logoAndBoards {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.money{
-    color: #F89A23;
-    font-family: Poppins;
-    font-size: 19.66px;
-    font-weight: 800;
-    padding-right: 5px;
-}
-.matters{
-    color: #02969C;
-    font-family: Poppins;
-    font-size: 19.66px;
-    font-weight: 800;
+.logo {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+  margin-top: 30px;
+  cursor: pointer;
 }
 
-.moneyMatters{
-    padding-left: 11px;
+.money {
+  color: #f89a23;
+  font-family: Poppins;
+  font-size: 19.66px;
+  font-weight: 800;
+  padding-right: 5px;
+}
+.matters {
+  color: #02969c;
+  font-family: Poppins;
+  font-size: 19.66px;
+  font-weight: 800;
 }
 
+.moneyMatters {
+  padding-left: 11px;
+}
