--- a/src/components/DashBoardPageLastTransaction/DashBoardPageLastTransaction.css
+++ b/src/components/DashBoardPageLastTransaction/DashBoardPageLastTransaction.css
@@ -7,7 +7,7 @@
   font-size: 30px;
   color: #333b69;
   font-weight: 600;
-  font-family: Inner;
+  font-family: inter;
   padding-bottom: 10px;
 }
 .lastTransaction {
