--- a/src/components/DashBoardPage/DashBoardPage.css
+++ b/src/components/DashBoardPage/DashBoardPage.css
@@ -1,5 +1,10 @@
-.transactionHeader {
-  min-height: 13vh;
+.cards {
+  display: flex;
+  gap: 24px;
+  margin: 40px;
+}
+.dashBoardHeader {
+  min-height: 10vh;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -7,9 +12,4 @@
   padding-left: 40px;
   padding-right: 40px;
   padding-top: 26px;
-}
-.cards {
-  display: flex;
-  gap: 24px;
-  margin: 40px;
 }
