--- a/src/components/AddTransactionLayout/AddTransactionLayout.css
+++ b/src/components/AddTransactionLayout/AddTransactionLayout.css
@@ -1,27 +1,13 @@
-.mainDiv {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.addTransactionLayout {
-  width: 30vw;
-  height: 70vh;
-  background-color: lightblue;
-  border-radius: 25px;
-}
-
 .inputDIv {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 
 .addTransaction {
   grid-column: 1 /-1;
   background-color: #2d60ff;
   border-radius: 10px;
-}
-.addTransactionModal {
-  width: 30px;
 }
 
 .head {
@@ -35,4 +21,11 @@
   height: 0px;
   width: 0px;
   cursor: pointer;
+}
+.field {
+  height: 40px;
+  border-radius: 10px;
+  background-color: white;
+  border-width: 1px;
+  border-color: #dfeaf2;
 }
