--- a/src/components/DeleteTransaction/DeleteTransaction.css
+++ b/src/components/DeleteTransaction/DeleteTransaction.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
 }
-.div {
+.imageAndContentDiv {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
