--- a/src/components/AddTransactionLayout/AddTransactionLayout.css
+++ b/src/components/AddTransactionLayout/AddTransactionLayout.css
@@ -1,13 +1,19 @@
 .inputDIv {
   display: flex;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .addTransaction {
   grid-column: 1 /-1;
   background-color: #2d60ff;
   border-radius: 10px;
+  width: 100%;
+  border-width: 0;
+  height: 35px;
+  color: white;
+  font-style: inter;
+  font-weight: 500;
 }
 
 .head {
@@ -33,4 +39,9 @@
 .transactionHeading {
   color: #333b69;
   font-family: Inter;
+}
+.fieldNames {
+  color: #505887;
+  padding-bottom: 8px;
+  font-family: inter;
 }
