deleting transaction from last three transactions

--- a/src/components/Transaction/Transaction.css
+++ b/src/components/Transaction/Transaction.css
@@ -10,6 +10,9 @@
 .editOption {
   margin-right: 50px;
   cursor: pointer;
+  background-color: white;
+  border-color: white;
+  border-width: 0;
 }
 
 .iconAndTransactionName {
