--- a/src/components/AddTransactionLayout/AddTransactionLayout.css
+++ b/src/components/AddTransactionLayout/AddTransactionLayout.css
@@ -1,31 +1,40 @@
-.inputDIv {
+.container-classname {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.inputDiv {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
+  width: 100%;
 }
 
 .addTransaction {
   grid-column: 1 /-1;
   background-color: #2d60ff;
   border-radius: 10px;
-  width: 100%;
+  width: fit-content;
   border-width: 0;
   height: 35px;
   color: white;
   font-style: inter;
   font-weight: 500;
+  padding-right: 12px;
+  padding-left: 12px;
 }
 
 .head {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 }
 
 .closeButton {
   background-color: white;
   border-width: 0px;
-  height: 0px;
-  width: 0px;
   cursor: pointer;
 }
 .field {
@@ -34,14 +43,24 @@
   background-color: white;
   border-width: 1px;
   border-color: #dfeaf2;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .transactionHeading {
   color: #333b69;
   font-family: Inter;
 }
+
 .fieldNames {
   color: #505887;
   padding-bottom: 8px;
   font-family: inter;
+}
+
+.forms-container-classname {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
